# otsdaq_fermilabtestbeam

./: CMakeLists.txt  README.md  old_ftbf_otsdaq_readme.txt  otsdaq_readme.txt
doc/: Doxyfile
otsdaq-fermilabtestbeam/: CMakeLists.txt
otsdaq-fermilabtestbeam/ArtModules/: CMakeLists.txt  EventDataReceiverProducer_module.cc  EventDataServer_module.cc  FTBFInput_source.cc  STIBDQM_module.cc  TriggerCounter_module.cc  WireChamberDQMECL_module.cc  WireChamberDQM_module.cc  WireChamberPythonOutput_module.cc  anatka.C
otsdaq-fermilabtestbeam/ArtModules/detail/: DataRequestMessage.hh
otsdaq-fermilabtestbeam/CAMAC_XXUSB/: UsbHandler.cpp  UsbHandler.h  compile_lecroy.sh  lecroy.c
otsdaq-fermilabtestbeam/DAQFirmwareHardware/: CMakeLists.txt  FSSRFirmwareBase.cc  FSSRFirmwareBase.h  FSSRFirmwareDefinitions.h  FirmwareBaseDefinitions.h  FirmwareSequence.h  PurdueFirmwareCore.cc  PurdueFirmwareCore.h
otsdaq-fermilabtestbeam/DQMHistos/: CMakeLists.txt  FSSRDQMHistos.cc  FSSRDQMHistos.h  WireChamberDQMHistos.cc
otsdaq-fermilabtestbeam/DataDecoders/: BCOData.cc  DataDecoder.cc  DataDecoder.h  DataTypes.cc  FSSRData.cc  FSSRData.h  PSI46Data.cc  PSI46Data.h  PSI46DigData.cc  PSI46DigData.h  TriggerData.cc  VIPICData.cc  VIPICData.h
otsdaq-fermilabtestbeam/DataProcessorPlugins/: CMakeLists.txt  FSSRDQMHistosConsumer.h  FSSRDQMHistosConsumer_processor.cc  FSSRRawDataSaverConsumer_processor.cc  RootDQMHistosConsumer_processor.cc  UDPFSSRDataListenerProducer.h  UDPFSSRDataListenerProducer_processor.cc  UDPFSSRDataStreamerConsumer.h  UDPFSSRDataStreamerConsumer_processor.cc  WireChamberDQMHistosConsumer.h  WireChamberDQMHistosConsumer_processor.cc  WireChamberDataSaverConsumer_processor.cc
otsdaq-fermilabtestbeam/Deprecated/: FEOtsUDPFSSRInterface.h  FEOtsUDPFSSRInterface_interface.cc  FEPurdueFSSRInterface.h  FEPurdueFSSRInterface_interface.cc  PSI46DigFirmware.cc  PSI46DigFirmware.h  PSI46DigFirmwareDefinitions.h  PSI46DigROCDefinitions.cc  PSI46DigROCDefinitions.h  VIPICFirmware.cc  VIPICFirmware.h  VIPICFirmwareDefinitions.h  VIPICROCDefinitions.cc  VIPICROCDefinitions.h
otsdaq-fermilabtestbeam/Deprecated/DetectorConfiguration/: DACsConfigurationBase.cc  DACsConfigurationBase.h
otsdaq-fermilabtestbeam/Deprecated/DetectorConfiguration/0/: DetectorConfiguration_v0.xml
otsdaq-fermilabtestbeam/Deprecated/DetectorConfiguration/1/: DetectorConfiguration_v1.xml
otsdaq-fermilabtestbeam/Deprecated/DetectorConfiguration/2/: DetectorConfiguration_v2.xml
otsdaq-fermilabtestbeam/Deprecated/DetectorConfiguration/3/: DetectorConfiguration_v3.xml
otsdaq-fermilabtestbeam/Deprecated/DetectorToFEConfiguration/0/: DetectorToFEConfiguration_v0.xml
otsdaq-fermilabtestbeam/Deprecated/DetectorToFEConfiguration/1/: DetectorToFEConfiguration_v1.xml
otsdaq-fermilabtestbeam/Deprecated/DetectorToFEConfiguration/2/: DetectorToFEConfiguration_v2.xml
otsdaq-fermilabtestbeam/Deprecated/DetectorToFEConfiguration/3/: DetectorToFEConfiguration_v3.xml
otsdaq-fermilabtestbeam/DetectorConfiguration/: CMakeLists.txt  DACStream.cc  DACStream.h  FSSRDACsConfiguration.cc  FSSRDACsConfiguration.h  ROCDACs.h  ROCStream.h
otsdaq-fermilabtestbeam/DetectorHardware/: CMakeLists.txt  FSSRROCDefinitions.cc  FSSRROCDefinitions.h  VROCDefinitions.h
otsdaq-fermilabtestbeam/EventBuilder/: AssociativeMemoryEventBuilder.cc  AssociativeMemoryEventBuilder.h  CMakeLists.txt  Event.cxx  Event.h  EventDataSaver.cc  EventDataSaver.h  LinkDef.h  VirtualEventBuilder.cc  VirtualEventBuilder.h  VirtualHit.h
otsdaq-fermilabtestbeam/FEInterfaces/: CMakeLists.txt  CherenkovREADME  FECAMACInterface.h  FECAMACInterface_interface.cc  FECAMACTCPInterface.h  FECAMACTCPInterface_interface.cc  FECommanderInterface.h  FECommanderInterface_interface.cc  FEPSI46Interface.h  FEPSI46Interface_interface.cc  FEPixelTelescopeInterface.h  FEPixelTelescopeInterface_interface.cc  FEPurdueNetworkMasterInterface.h  FEPurdueNetworkMasterInterface_interface.cc  FSSRInterface.h  FSSRInterface_interface.cc  FTBFWireChamberInterface.h  FTBFWireChamberInterface_interface.cc
otsdaq-fermilabtestbeam/Generators/: CAMACReceiver.hh  CAMACReceiver_generator.cc  CMakeLists.txt  STIBEventReceiver_generator.cc  STIBReceiver_generator.cc  WireChamberEventReceiver.hh  WireChamberEventReceiver_generator.cc  WireChamberReceiver.hh  WireChamberReceiver_generator.cc
otsdaq-fermilabtestbeam/InterfaceTest/: CMakeLists.txt  FermilabTestBeamInterfaceTestMain.cc  RunInterfaceTest.sh  UsbHandlerTestMain.cc
otsdaq-fermilabtestbeam/MonicelliInterface/: ANSIColors.h  CMakeLists.txt  Detector.cxx  Detector.h  Event.cxx  Event.h  EventHeader.cxx  EventHeader.h  Geometry.cxx  Geometry.h  LinkDef.h  MessageTools.h  MonicelliEventAnalyzer.cpp  MonicelliEventAnalyzer.h  MonicelliFileReader.cpp  MonicelliFileReader.h  MonicelliGeometryConverter.cpp  MonicelliGeometryConverter.h  ROC.cxx  ROC.h  Visual3DData.h  Visual3DEvent.h  Visual3DGeometry.h
otsdaq-fermilabtestbeam/Overlays/: CAMACFragment.hh  CMakeLists.txt  FragmentType.cc  FragmentType.hh  STIBEventFragment.hh  STIBEventFragmentWriter.hh  STIBFragment.hh  WireChamberEventFragment.hh  WireChamberFragment.hh
otsdaq-fermilabtestbeam/TCPSocket/: CMakeLists.txt  SocketException.hh  TCPSocket.cpp  TCPSocket.h
otsdaq-fermilabtestbeam/libusb-master/autom4te.cache/: traces.0t
otsdaq-fermilabtestbeam/libusb-master/examples/: dpfp.c  dpfp_threaded.c  ezusb.c  ezusb.h  fxload.c  hotplugtest.c  listdevs.c  sam3u_benchmark.c  testlibusb.c  xusb.c
otsdaq-fermilabtestbeam/libusb-master/examples/getopt/: getopt.c  getopt.h  getopt1.c
otsdaq-fermilabtestbeam/libusb-master/libusb/: core.c  descriptor.c  hotplug.c  hotplug.h  io.c  libusb.h  libusbi.h  strerror.c  sync.c
otsdaq-fermilabtestbeam/libusb-master/msvc/: config.h  errno.h  inttypes.h  missing.c  missing.h  stdint.h
otsdaq-fermilabtestbeam/libusb-master/tests/: libusb_testlib.h  stress.c  testlib.c
otsdaq-fermilabtestbeam/xxusb_3.3/include/: libxxusb.h
otsdaq-fermilabtestbeam/xxusb_3.3/src/: CMakeLists.txt  libxxusb.c
tools/: CMakeLists.txt  new_experiment.sh  (+2 more)
(+481 files in other folders)
