add_subdirectory(DQMHistos)
add_subdirectory(DataDecoders)
add_subdirectory(FEInterfaces)
add_subdirectory(DataProcessorPlugins)
add_subdirectory(TCPSocket)
add_subdirectory(EventBuilder)
add_subdirectory(MonicelliInterface)
add_subdirectory(DAQFirmwareHardware)
add_subdirectory(DetectorConfiguration)
add_subdirectory(DetectorHardware)
#add_subdirectory(InterfaceTest)
#add_subdirectory(Overlays)
#add_subdirectory(ArtModules)
#add_subdirectory(Generators)
add_subdirectory(xxusb_3.3)
